refine schema, event parser